--- a/week-3/dictionary/index.html
+++ b/week-3/dictionary/index.html
@@ -7,19 +7,22 @@
 </head>
 <body>
     <div class="container">
-        <h1>THE URL SHORTENER</h1>
+        <h1>MICS Dictionary</h1>
         <form>
-            <label>Enter URL to be shortened:</label>
-            <input type="url" id="url">
+            <label>Enter a word, any word!</label>
+            <input class="form-control" type="text" id="word">
         </form>
 
         <br>
 
-        <button id="get-shortened-url">Get Shortened URL</button>
+        <button>Get Meaning And Other Cool Data</button>
 
         <br>
 
-        <p id="shortened-url"></p>
+        <p id="type"></p>
+        <p id="pronunciation"></p>
+        <p id="definition"></p>
+        <p id="example"></p>
     </div>
     
 </body>
