--- a/week-4/movie-zone/index.html
+++ b/week-4/movie-zone/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
+
 <head>
     <title>Movie Zone</title>
-    <script language="JavaScript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script language="JavaScript" type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script language="JavaScript" crossorigin="anonymous" type="text/javascript" src="main.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
+
 <body>
     <div class="container">
         <h1>The Ultimate Movie Zone</h1>
@@ -14,30 +18,31 @@
         </form>
         <br>
         <button id="fetch">Fetch It!</button>
-<img id="poster"></p>
-<p id="year"></p>
-<p id="rated"></p>
-<p id="released"></p>
-<p id="runtime"></p>
-<p id="genre"></p>
-<p id="director"></p>
-<p id="writer"></p>
-<p id="actors"></p>
-<p id="plot"></p>
-<p id="language"></p>
-<p id="country"></p>
-<p id="awards"></p>
-<p id="metascore"></p>
-<p id="imdbRating"></p>
-<p id="imdbVotes"></p>
-<p id="imdbID"></p>
-<p id="type"></p>
-<p id="dvd"></p>
-<p id="boxoffice"></p>
-<p id="production"></p>
-<p id="website"></p>
+        <img id="poster"></p>
+        <p id="year"></p>
+        <p id="rated"></p>
+        <p id="released"></p>
+        <p id="runtime"></p>
+        <p id="genre"></p>
+        <p id="director"></p>
+        <p id="writer"></p>
+        <p id="actors"></p>
+        <p id="plot"></p>
+        <p id="language"></p>
+        <p id="country"></p>
+        <p id="awards"></p>
+        <p id="metascore"></p>
+        <p id="imdbRating"></p>
+        <p id="imdbVotes"></p>
+        <p id="imdbID"></p>
+        <p id="type"></p>
+        <p id="dvd"></p>
+        <p id="boxoffice"></p>
+        <p id="production"></p>
+        <p id="website"></p>
 
-</div>
-    
+    </div>
+
 </body>
+
 </html>
